# maths-preview

./: .gitignore  Cargo.toml  LICENSE  Makefile  Readme.md
clients/google-docs/: Makefile
clients/google-docs/scripts/: convert_wasm_to_base64.py  fill_template.py
clients/google-docs/src/: setupui.js  sidebar_template.html
clients/libreoffice-write/: Addons.xcu  HOWTO.md  Makefile  ToolbarState.xcu  description.xml
clients/libreoffice-write/config/: config.xcs  config.xcu  options.xcu
clients/libreoffice-write/dialogs/: all_options.xdl
clients/libreoffice-write/src/: config.py  configuration.py  insert_formula.py  strings_en_US.properties
clients/libreoffice-write/src/pythonpath/: settings_rw.py  utils.py
clients/sublime-text/: Default.sublime-commands  Default.sublime-settings  InsertFormula.sublime-settings  insert_formula.py
maths-preview-web/: Cargo.toml  README.md  build.sh
maths-preview-web/src/: canvas.rs  error.rs  lib.rs  owned_math_font.rs  svg.rs  ui.rs  utils.rs
maths-preview-web/static/: index.html  style.css  ui.js
src/: app.rs  cli.rs  desktop.rs  error.rs  geometry.rs  glyph_to_character.rs  lib.rs  main.rs  render.rs  ui.rs  undo.rs  undo_stack.rs  web.rs
src/desktop/: app.rs  cli.rs  error.rs  render.rs  ui.rs  undo.rs
src/svg/: mod.rs  ttfparser.rs
src/web/: canvas.rs  owned_math_font.rs
src/web/static/: index.html  ui.js
