[package]
name = "maths_preview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
gtk4 = "0.7.2"
cairo-rs = {version = "*", features=["svg"]}
rex = {git = "https://github.com/KenyC/ReX", features = ["ttfparser-fontparser", "cairo-renderer"], rev="30ad53b09336db84d0cd07fab051465c72d88685"}
ttf-parser = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rex-svg = { path = "deps/rex-svg/", features=["ttf-parser"] }
utf16string = "0.2.0"
