[package]
name = "maths_preview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
gtk4 = "0.10.2"
cairo-rs = {version = "*", features=["svg"]}
rex = {git = "https://github.com/KenyC/ReX", features = ["ttfparser-fontparser", "cairo-renderer"], rev = "37a0b47177f24f124513894ed11b0faa328716b8"}
ttf-parser = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rex-svg = { path = "deps/rex-svg/", features=["ttf-parser"] }
utf16string = "0.2.0"
