[package]
name = "maths_preview"
version = "0.1.0"
edition = "2021"


[lib]
# We keep "cdylib" for wasm, and cargo will add "rlib" for the binary
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "maths_preview"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gtk4 = "0.10.2"
cairo-rs = {version = "*", features=["svg"]}
rex = {git = "https://github.com/KenyC/ReX", features = ["ttfparser-fontparser", "cairo-renderer"], rev = "a779adebe63e70ef3b078090373c3af23c8b1083"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
rex = {git = "https://github.com/KenyC/ReX", features = [], rev = "a779adebe63e70ef3b078090373c3af23c8b1083"}
web-sys = {version = "*", features = [
	'Document',
	'Element',
	'HtmlElement',
	'Node',
	'Url',
	'Blob',
	'Window',
	'CanvasRenderingContext2d',
	'OffscreenCanvasRenderingContext2d',
	'CanvasWindingRule',
	'HtmlAnchorElement',
	'HtmlButtonElement',
	'HtmlCanvasElement',
	'HtmlInputElement',
]}
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2.95"
owned_ttf_parser = "0.19.0"
js-sys = "0.3.64"


[dependencies]
ttf-parser = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utf16string = "0.2.0"
