[package]
name = "maths-preview-web"
version = "0.1.0"
authors = ["Keny C <keny.chatain@mailbox.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

rex = {git = "https://github.com/KenyC/ReX", features = []}
rex-svg = {path = "../deps/rex-svg/"}
base64 = "0.21.0"
web-sys = {version = "*", features = [
	'Document',
	'Element',
	'HtmlElement',
	'Node',
	'Url',
	'Blob',
	'Window',
	'CanvasRenderingContext2d',
	'OffscreenCanvasRenderingContext2d',
	'CanvasWindingRule',
	'HtmlAnchorElement',
	'HtmlButtonElement',
	'HtmlCanvasElement',
	'HtmlInputElement',
]}
owned_ttf_parser = "0.19.0"
js-sys = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
